CMBSandbox4/src/objects/HarvestProject__c.object
<CustomObject>
    <fields>
        <fullName>SyncStatus__c</fullName>
        <inlineHelpText>Indicates the status of pairing the salesforce.co HarvestProject record to an associated Project record in Harvest.</inlineHelpText>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Status Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest Project Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest Project Not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalProjectFees__c</fullName>
        <inlineHelpText>If this project is budgeted based on total fees, what is the total fee budget?  Leave blank otherwise.</inlineHelpText>
        <label>Total Project Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectHours__c</fullName>
        <inlineHelpText>If this project is budgeted by hours, what is the budget in hours for the project.  Leave blank otherwise.</inlineHelpText>
        <label>Total Project Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTime__c</fullName>
        <inlineHelpText>Total of time cards logged in Harvest (both invoiced and uninvoiced)</inlineHelpText>
        <label>Hours Logged</label>
        <summarizedField>HarvestTimeEntry__c.Duration__c</summarizedField>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contractor_Cost__c</fullName>
        <inlineHelpText>Roll up from Contractor Cost</inlineHelpText>
        <label>Total Contractor Cost</label>
        <summarizedField>HarvestTimeEntry__c.Contractor_Cost_Roll_Up__c</summarizedField>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hrs_Developer__c</fullName>
        <label>Total Estimated Hrs(Developer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fees_to_Client__c</fullName>
        <formula>Total_Hours_to_Client__c * ProjectHourlyRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_to_Client__c</fullName>
        <label>Hours Incurred</label>
        <summarizedField>HarvestTimeEntry__c.Hours__c</summarizedField>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Hours__c</fullName>
        <label>Total Invoice Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Amount__c</fullName>
        <label>Total Invoiced Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trello_Board_URL__c</fullName>
        <label>Trello Board URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UnInvoicedCMB_TimeEntries__c</fullName>
        <label>UnInvoiced CMB Time Entries</label>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced_by_CMB__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UninvoicedTime__c</fullName>
        <inlineHelpText>Total of time cards in Harvest which are NOT marked as invoiced.</inlineHelpText>
        <label>Uninvoiced Time (OLD)</label>
        <summarizedField>HarvestTimeEntry__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uninvoiced_Time_by_CMB__c</fullName>
        <label>Uninvoiced Time</label>
        <summarizedField>HarvestTimeEntry__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>HarvestTimeEntry__c.Invoiced_by_CMB__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>HarvestTimeEntry__c.HarvestProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Weekly_Goal__c</fullName>
        <label>Weekly Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X70_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will turn off the 70% alert workflow</inlineHelpText>
        <label>70% Alert</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Client_Apps</fullName>
        <columns>NAME</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>LastHarvestSync__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>TotalTime__c</columns>
        <columns>Archived__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>cloudmybiz,fundingo</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HarvestProject__c.Internal</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MCA,app</value>
        </filters>
        <label>Client: Apps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_BCC</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>business credit</value>
        </filters>
        <label>Client: BCC</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_CPS</fullName>
        <columns>NAME</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Burn__c</columns>
        <columns>Hours_to_Client_This_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Canadian</value>
        </filters>
        <label>Client: CPS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_CloudMyBiz</fullName>
        <columns>NAME</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>LastHarvestSync__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>TotalTime__c</columns>
        <columns>Archived__c</columns>
        <columns>Non_Billable_State__c</columns>
        <columns>ProjectType__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>cloudmybiz</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Client: CloudMyBiz</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Forward_Financing</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Archived__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <columns>Uninvoiced_Time_by_CMB__c</columns>
        <columns>Monitor_Hours__c</columns>
        <columns>Hours_to_Client_This_Month__c</columns>
        <columns>Monthly_Hours_Budget__c</columns>
        <columns>Hours_this_Month_of_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>forward</value>
        </filters>
        <label>Client: Forward Financing</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Funding_Metrics</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Archived__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Funding Metrics</value>
        </filters>
        <label>Client: Funding Metrics</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_ICF</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Archived__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <columns>Uninvoiced_Time_by_CMB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Infinity</value>
        </filters>
        <label>Client: ICF</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Imperial</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Archived__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <columns>Uninvoiced_Time_by_CMB__c</columns>
        <columns>Monitor_Hours__c</columns>
        <columns>Hours_to_Client_This_Month__c</columns>
        <columns>Monthly_Hours_Budget__c</columns>
        <columns>Hours_this_Month_of_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Imperial</value>
        </filters>
        <label>Client: Imperial</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Jacco</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Archived__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Jaco</value>
        </filters>
        <label>Client: Jacco</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Jacuzzi</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Archived__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Jacuzzi</value>
        </filters>
        <label>Client: Jacuzzi</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Kandela</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Archived__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Kandela</value>
        </filters>
        <label>Client: Kandela</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Lucky_Strike</fullName>
        <columns>NAME</columns>
        <columns>Burn__c</columns>
        <columns>Archived__c</columns>
        <columns>Receives_Weekly_Report__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Lucky</value>
        </filters>
        <label>Client: Lucky Strike</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_NBC</fullName>
        <columns>NAME</columns>
        <columns>Archived__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Burn__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <columns>Non_Billable_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>National Business Capital</value>
        </filters>
        <label>Client: NBC</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_NLF</fullName>
        <columns>NAME</columns>
        <columns>Archived__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Burn__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Next Level</value>
        </filters>
        <label>Client: NLF</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_OnePark</fullName>
        <columns>NAME</columns>
        <columns>Archived__c</columns>
        <columns>Hours_Snapshot__c</columns>
        <columns>Burn__c</columns>
        <columns>DaysSinceTimeLastLogged__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Total_Hours_to_Client__c</columns>
        <columns>Actual_Minus_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>one park,onepark</value>
        </filters>
        <label>Client: OnePark</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>External_Communities</fullName>
        <active>true</active>
        <description>External - Communities</description>
        <label>External - Communities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal Users</description>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Maintenance</fullName>
        <active>true</active>
        <label>Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Project</fullName>
        <active>true</active>
        <label>Internal Project</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Budget_by_Hours_without_budget</fullName>
        <active>false</active>
        <description>If the project has an hourly budget, then require budgeted hours to be populated.</description>
        <errorConditionFormula>and( ISPICKVAL( Budget__c , &quot;Total project hours&quot;) , ISBLANK( TotalProjectHours__c ) )</errorConditionFormula>
        <errorDisplayField>TotalProjectHours__c</errorDisplayField>
        <errorMessage>You must enter the Budget # of Hours for this project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Presales</fullName>
        <active>true</active>
        <description>When project is presales, the project type should be presales</description>
        <errorConditionFormula>AND(
ISNEW(),
NOT(CONTAINS(TEXT(ProjectType__c), &quot;Presales&quot;)),
 OR(
CONTAINS( Name , &quot;PreSales&quot;),
CONTAINS( Name , &quot;Presales&quot;)
)

)</errorConditionFormula>
        <errorDisplayField>ProjectType__c</errorDisplayField>
        <errorMessage>The Project Name contains PreSales, please update the Project Type field to PreSales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Repoppening_Projects_Restrictions</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 PRIORVALUE(Archived__c)=True,
Archived__c=False)</errorConditionFormula>
        <errorMessage>Repoppening Projects must be done by Accounting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warn_on_Late_Start_Date</fullName>
        <active>false</active>
        <description>Provide warning if Date Started is AFTER the Earliest Time Logged date.</description>
        <errorConditionFormula>DateStarted__c &gt;  EarliestTimeLogged__c</errorConditionFormula>
        <errorDisplayField>DateStarted__c</errorDisplayField>
        <errorMessage>Date Started must be ON or BEFORE Earliest Time Logged date</errorMessage>
    </validationRules>
</CustomObject>